--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
   <artifactId>assiette</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-  <description>My wonderfull scala app</description>
+  <url>https://github.com/pgiroud/assiette/wiki</url>
+  <description>Calcul des assiettes de l'impôt sur le revenu et la fortune</description>
   <inceptionYear>2018</inceptionYear>
   <licenses>
     <license>
-      <name>My License</name>
-      <url>http://....</url>
+      <name>GNU General Public License (GPL)</name>
+      <url>http://www.gnu.org/licenses/gpl.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
